# zipsign

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  SECURITY.md  codecov.yml  flake.nix  travis.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  generic-issue-template.md
.github/workflows/: build-centos.yml  build-maxos.yml  build-ubuntu.yml  build-windows.yml  docker-image.yml  release-build.yml  release-windows.yml
3rd-party-licenses/: LICENSE.gcc_runtime_library
doc/: README.md
docker/: centos7.dockerfile  ubuntu.dockerfile
include/base64/: base64.h
include/cli/: app.hpp  app_info.hpp  argument.hpp  arguments.hpp  cli.hpp  command.hpp  verb.hpp
include/openssl++/: basic_io.hpp  big_number.hpp  certificate.hpp  certificate_stack.hpp  certificate_store.hpp  cms.hpp  exception.hpp  init.hpp  openssl++.hpp  private_key.hpp
include/zipsign/: api.h  error.h  error_code.h  error_codes.h  informer.hpp  lazy.h  openssl.h  signer.hpp  status.h  verifier.hpp  zipsign.h  zipsign.hpp
lib/base64/: base64.c
lib/cli/: app.cc  app_info.hpp  argument.cc  argument.hpp  argument_type.hpp  arguments.cc  default_arguments.cc  default_arguments.hpp  default_verb.cc  default_verb.hpp  options.cc  options.hpp  value.hpp  verb.cc
lib/openssl++/: basic_io.cc  big_number.cc  certificate.cc  certificate_stack.cc  certificate_store.cc  cms.cc  exception.cc  init.cc  private_key.cc
lib/zipsign/: file.cc  file.hpp  ftruncate.h  informer.cc  partial_input_file.cc  partial_input_file.hpp  signature.hpp  signer.cc  verifier.cc  zip.cc  zip.hpp
lib/zipsign/impl/zip/: zip.h
logo/: logo.xcf
snap/: snapcraft.yaml
src/cli/: main.c
src/zipsign/: error.c  error_code.c  lazy.c  main.cc  openssl.c  status.c
src/zipsign/impl/: error.c  error.h  error_code.c  error_code.h  lazy.c  lazy.h  openssl.c  openssl.h  status.c  status.h
src/zipsign/impl/base64/: base64.c
src/zipsign/impl/cms/: cms.c  cms.h
src/zipsign/impl/zip/: zip.c
test/: dummy.cc  error.cc  openssl_environment.cc  private_key.cc  sign_and_verify.cc  test_base64.cc  test_bignumber.cc  test_file.cc  test_informer.cc  test_partial_input_file.cc  test_sign_and_verify.cc  test_zip.cc  testutils.cc  testutils.hpp
test/cli/: mock_app_info.hpp  test_app.cc  test_argument.cc  test_arguments.cc  test_default_arguments.cc  test_options.cc  test_verb.cc
test/openssl/: alice.conf  create-pki.sh  root-ca.conf  signing-ca.conf  test_basic_io.cc  test_certificate.cc  test_certificate_stack.cc  test_certificate_store.cc  test_cms.cc  test_file_not_found_exception.cc  test_openssl_base_exception.cc  test_openssl_exception.cc  test_private_key.cc
